Fix: Scrollbar thumb color

--- a/src/styles/discord.custom-colors.sass
+++ b/src/styles/discord.custom-colors.sass
@@ -44,6 +44,8 @@ html:root,
   --channels-default: var(--synqats-gb-grey-2)
 
   --input-placeholder-text: var(--synqats-gb-grey-1)
+  
+  --scrollbar-auto-thumb: var(--synqats-gb-bg-0)
 
   --channel-text-area-placeholder: var(--synqats-gb-grey-1)
 
